--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -51,4 +51,13 @@ server {
         proxy_pass $target;
     }
 
+    location / {
+    try_files $uri @rewrites;
+    root /frontend;
+    }
+
+    location @rewrites {
+    rewrite ^(.+)$ /index.html last;
+    }
+}
 
