--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -12,7 +12,9 @@ services:
       - media-files:/media-files
   backend:
     image: registry.gitlab.propulsion-home.ch/full-stack/batch-10-november-2019/group-projects/aquarius
-    command: "sh /scripts/run.sh"
+#    command: "sh /scripts/run.sh"
+    command: "tail -f /dev/null"  # TEMPORARY
+
     env_file:
       - ./prod.env
     depends_on:
