--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: registry.gitlab.propulsion-home.ch/full-stack/batch-10-november-2019/group-projects/aquarius
     ports:
       - "8000:8000"
+    env_file:
+      - ./dev.env
     volumes:
       - ./backend:/backend
     command: "tail -f /dev/null"
@@ -15,6 +17,8 @@ services:
     image: postgres:latest
     ports:
       - "5432:5432"
+    env_file:
+      - ./dev.env
     volumes:
       - postgresdb:/var/lib/postgresql/data
 
