corsheaders version upgraded

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -12,7 +12,7 @@ services:
       - media-files:/media-files
 
   backend:
-    image: registry.gitlab.propulsion-home.ch/full-stack/batch-10-november-2019/group-projects/aquarius:master
+    image: registry.gitlab.propulsion-home.ch/full-stack/batch-10-november-2019/group-projects/aquarius:latest
     command: "sh /scripts/run.sh"
     env_file:
       - ./prod.env
