--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -20,6 +20,7 @@ services:
       - postgres
     volumes:
       - static-files:/static-files
+      - media-files:/media-files
       - ./scripts:/scripts
 
   postgres:
